--- a/services/server/Dockerfile
+++ b/services/server/Dockerfile
@@ -6,11 +6,13 @@ ENV APP_DIR /opt/wallet/server
 
 WORKDIR $APP_DIR
 
-COPY ./services/server/package.json /tmp/package.json
+COPY ./package.json /tmp/package.json
 
 RUN cd /tmp && npm install
 RUN mv /tmp/node_modules $APP_DIR/node_modules
 
-COPY ./services/server/ .
+COPY . .
 
-CMD npm start
+EXPOSE 3000
+
+CMD npm run dev
