--- a/services/server/Dockerfile
+++ b/services/server/Dockerfile
@@ -1,13 +1,11 @@
 FROM node:boron
 
 ENV NPM_CONFIG_LOGLEVEL warn
-ENV PORT 3000
-ENV APP_DIR /opt/wallet/server
+ENV APP_DIR /opt/react-hot-reloader/server
 
 WORKDIR $APP_DIR
 
 COPY ./package.json /tmp/package.json
-
 RUN cd /tmp && npm install
 RUN mv /tmp/node_modules $APP_DIR/node_modules
 
