fix Dockerfile for client service

--- a/services/client/Dockerfile
+++ b/services/client/Dockerfile
@@ -7,8 +7,7 @@ WORKDIR $APP_DIR
 
 COPY ./package.json /tmp/package.json
 RUN cd /tmp && npm install
-# RUN mv /tmp/node_modules $APP_DIR/node_modules
-RUN mv /tmp/node_modules ../node_modules
+RUN mv /tmp/node_modules $APP_DIR/node_modules
 
 COPY . .
 
