--- a/services/client/package.json
+++ b/services/client/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node dev-server"
+    "dev": "babel-node webpack/dev-server",
+    "clean": "rm -rf /client/dist/*"
   },
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.25.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
-    "express": "^4.15.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "^3.0.0-beta.7",
     "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-hot-middleware": "^2.18.1"
+    "webpack-dev-server": "^2.5.0"
   }
 }
