--- a/services/server/package.json
+++ b/services/server/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.3",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "pug": "^2.0.0-rc.2"
   }
 }
