--- a/services/server/package.json
+++ b/services/server/package.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.3",
-    "nodemon": "^1.11.0",
     "pug": "^2.0.0-rc.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
