--- a/services/client/.babelrc
+++ b/services/client/.babelrc
@@ -1,8 +1,3 @@
 {
-    "presets": ["stage-0", "es2015", "react"],
-    "env": {
-        "development": {
-            "presets": ["react-hmre"]
-        }
-    }
+    "presets": ["es2015", "stage-0", "react"]
 }
