--- a/services/client/package.json
+++ b/services/client/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "babel-node webpack/dev-server",
-    "clean": "rm -rf /client/public/*"
+    "server": "webpack-dev-server --config=./webpack/webpack.config.development.babel.js --content-base=www --inline --watch",
+    "dev": "webpack -d --watch --config=./webpack/webpack.config.development.babel.js --progress --colors",
+    "clean": "rm -rf /client/dist/*"
   },
   "license": "MIT",
   "dependencies": {
@@ -12,9 +13,8 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
