--- a/services/proxy/etc/nginx/conf.d/default.conf
+++ b/services/proxy/etc/nginx/conf.d/default.conf
@@ -11,6 +11,11 @@ server {
     gzip_types text/css application/javascript application/json;
     gzip_buffers 16 8k;
 
+    location ~ ^/(js/|css/|img/) {
+        root /opt/react-hot-reloader/assets;
+        access_log off;
+    }
+
     location ~ ^/ {
         proxy_set_header Host $http_host;
         proxy_pass http://server-upstream;
